newclay/test/Compiler/Propagation/Fail/IfStatementNotAllBranchesReturn3/main.clay
define nop;
overload nop() {}

define main;
overload main() {
    if (true)
        nop();
    else
        return 1;
}
